--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,14 @@ nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
+table{
+  border-collapse:collapse;
+  border:1px solid black;
+}
+
+table td{
+  border:1px solid black;
+}
 a {
     text-decoration: none;
     color: #999;
