--- a/css/main.css
+++ b/css/main.css
@@ -12,12 +12,7 @@ nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
-table{
-  border-collapse:collapse;
-  border:1px solid black;
-}
-
-table td{
+table th td{
   border:1px solid black;
 }
 a {
