--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
-table th td{
+table tr th td{
   border:1px solid black;
 }
 a {
