--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,9 @@ nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
+table{
+  border:1px solid black;
+}
 tr th td{
   border:1px solid black;
 }
