--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ nav ul li, footer ul li {
     margin-right: 20px;
 }
 table{
+  border-collapse: collapse;  
   border:1px solid black;
 }
 tr, th, td{
