--- a/css/main.css
+++ b/css/main.css
@@ -13,10 +13,11 @@ nav ul li, footer ul li {
     margin-right: 20px;
 }
 table {
-  border-collapse: collapse;  
+  border-collapse: collapse;
   border:1px solid black;
 }
-th, td {
+th, td {  
+  font-size: 20px;    
   border:1px solid black;
 }
 tbody tr:nth-child(odd) {
