--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,10 @@ table {
   border-collapse: collapse;
   border:1px solid black;
 }
+thead {
+  background-color: #333;
+  color: white;
+}
 th, td {  
   font-size: 20px;    
   border:1px solid black;
