--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,15 @@ footer {
     font-size: .8em;
 }
 
+ul.blogs { 
+    margin: 20px auto 40px; 
+    font-size: 1.5em;
+}
+
+ul.blogs li {
+    list-style: none;
+}
+
 ul.posts { 
     margin: 20px auto 40px; 
     font-size: 1.5em;
