--- a/css/main.css
+++ b/css/main.css
@@ -58,14 +58,5 @@ ul.blogs {
 }
 
 ul.blogs li {
-    list-style: none;
-}
-
-ul.posts { 
-    margin: 20px auto 40px; 
-    font-size: 1.5em;
-}
-
-ul.posts li {
-    list-style: none;
+    list-style: disc;
 }
