--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ thead {
   color: white;
 }
 th, td {  
-  font-size: 20px;    
+  font-size: 1.2em;    
   border:1px solid black;
 }
 tbody tr:nth-child(odd) {
